# react-native-wasm

./: .gitignore  README.md  index.js  jest.config.js  package-lock.json  package.json  react-native-wasm.podspec  rollup.config.js  tsconfig.json  wasm-rt-impl.c  wasm-rt-impl.h
android/: .project  CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactlibrary/: WasmModule.java  WasmPackage.java
android/src/main/java/com/reactnativewasm/: WasmModule.java  WasmModule.kt  WasmPackage.java  WasmPackage.kt
cpp/: example.cpp  example.h
example/: app.json  babel.config.js  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativewasm/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/WasmExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/WasmExample.xcodeproj/: project.pbxproj
example/ios/WasmExample.xcodeproj/xcshareddata/xcschemes/: WasmExample.xcscheme
example/ios/WasmExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Wasm-Bridging-Header.h  Wasm.h  Wasm.m  Wasm.mm  Wasm.swift
ios/Wasm.xcodeproj/: project.pbxproj
ios/Wasm.xcworkspace/: contents.xcworkspacedata
src/: Instance.js  WebAssembly.js  index.js  index.tsx
(+2 files in other folders)
